--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.book.AddBookActivity"></activity>
+        <activity android:name=".ui.book.ViewBookActivity"></activity>
+        <activity android:name=".ui.book.AddBookActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
