--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,6 @@ dependencies {
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
