--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.elvina.bookstats">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:node="replace"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:node="replace"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:node="replace" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        tools:node="replace" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +17,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.book.EditBookActivity"/>
+        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".ui.book.EditBookActivity" />
         <activity
             android:name=".ui.book.ViewBookActivity"
             android:screenOrientation="portrait" />
